<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Momentum</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="camera">CAMERA</string>
    <string name="image_cd_camera">This is a generic content description</string>
    <string name="capture_string">Capture</string>
    <string name="simple_cd_string">simple_content_description</string>
    <string name="contentd_string">Simple content description</string>
    <string name="image_content_description">image_content_description</string>
    <string name="image_1_camera">image_1_camera</string>
    <string name="image_2_gallery">image_2_gallery</string>
    <string name="image_3_video">image_3_video</string>
    <string name="card_back_title">Card Front</string>
    <string name="card_back_description">Gallery</string>
    <string name="button_string">Turn</string>
    <string name="feed_item_description">New Text</string>
    <string name="feed_item_content_description">Image</string>
    <string name="feed_item_image_">feed_item_profile_image_content_description</string>
    <string name="feed_item_status_message">Descripcion de la foto que acabo de tomar...</string>
    <string name="contento_camera_pic">Content_camera_open</string>
    <string name="title_activity_camera_independant">CameraIndependantActivity</string>
    <string name="title_activity_itempreview">itempreview</string>
    <string name="cd_itempreview">contentDescription_itempreview</string>
    <string name="title_activity_image_preview">ImagePreview</string>
    <string name="txtStatusMessage">La descripcion va aqui....me estoy regando en paja para ver hasta donde queda esta
        baina..... Vamos a seguirnos regando en paja para ver hasta donde llega estooooooo</string>
    <string name="UserName">Dennis Noel</string>
    <string name="feed_item_str">CD_feed_item_image</string>
    <string name="timestamp">2 minutes ago</string>
    <string name="title_activity_create_post">CreatePost</string>
    <string name="previewUploadPhoto_ContentDescription">this is the picture preview before uploading a new photo
    </string>
    <string name="btn_takePhoto_contentDescription">Call camera to take a new picture</string>
    <string name="btn_Upload">Choose from gallery</string>
    <string name="btn_cancel_text">Done</string>
    <string name="profile_image_contentDescription">Profile Image</string>

</resources>
