<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.momentun_app.app.CreatePost">

    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp" android:layout_alignParentTop="true" android:layout_marginTop="0dp"
                android:layout_above="@+id/linearLayout">
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/previewUploadPhoto" android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/previewUploadPhoto_ContentDescription"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:id="@+id/linearLayout">
            <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photoButton" android:layout_gravity="center_horizontal"
                    android:src="@drawable/c023" android:contentDescription="@string/btn_takePhoto_contentDescription"/>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Upload"
                    android:id="@+id/btn_Upload" android:layout_gravity="center_horizontal" android:onClick="openGallery"/>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel_text"
                    android:id="@+id/done_button" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
